first content update

--- a/style.scss
+++ b/style.scss
@@ -7,3 +7,15 @@
 .sub-logo{
     width: 150px;
 }
+
+h1,h4{
+    font-family: 'Inria Serif', serif;
+}
+
+h6{
+    color: red;
+}
+
+.content-pic{
+    width: 250px;
+}
